--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,6 @@
 <!-- app/views/pages/home.html.erb -->
 <!-- [...] -->
-
+<div id="root">   <!-- This is where the React component will be rendered -->
+    <%= javascript_pack_tag 'hello_react' %>
 <p><span data-controller="typed-js"></span></p>
+</div>
