--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,3 @@
-<!-- app/views/pages/home.html.erb -->
-<!-- [...] -->
-<div id="root">   <!-- This is where the React component will be rendered -->
-    <%= javascript_pack_tag 'hello_react' %>
-<p><span data-controller="typed-js"></span></p>
-</div>
+<%= content_tag(:div, "", id:"app", data: {
+    controller: "react"
+}) %>
